Install mypy in virtualenv.

--- a/algorithms/Makefile
+++ b/algorithms/Makefile
@@ -2,7 +2,7 @@ PROGS:=$(wildcard *.py)
 
 .PHONY: all
 all:
-	. ~/.py3_classic_algorithms/bin/activate; black $(PROGS)
+	. ~/.py3_classic_algorithms/bin/activate; black $(PROGS); \
 	mypy $(PROGS)
 	chmod +x $(PROGS)
 
@@ -12,7 +12,7 @@ setup:
 	python3 -mvenv ~/.py3_classic_algorithms
 	. ~/.py3_classic_algorithms/bin/activate; \
 	pip install --upgrade pip; \
-	pip install black
+	pip install black mypy
 
 .PHONY: clean
 clean:
