Link [-static] C programs with musl-libc.

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,19 +1,22 @@
 PROGS:=$(patsubst %.c,%,$(wildcard *.c))
-CC:=gcc
-
+CC:=musl-gcc -static
+CFLAGS:=-pedantic -Werror -Wextra -O -g3 -Wall -std=c17
+LDFLAGS:=-lm
 .PHONY: all
-all: $(PROGS)
+all: hw fixed_width hello
 	@:
 
 %: %.c
 %: %.s
 
 % : %.o
-	$(CC) -Wall -o $@ $<
+	$(CC) -Wall $(LDFLAGS) -o $@ $^
 
 # -save-temps
 %.o : %.c
-	$(CC) -c -pedantic -Werror -Wextra -O -g3 -Wall -std=c17 -lm -o $@ $<
+	$(CC) -c $(CFLAGS) -o $@ $<
+
+hw: hw.o hw-lib.o
 
 .PHONY: clean
 clean:
