[Makefile] additional compilation flags.

--- a/c/Makefile
+++ b/c/Makefile
@@ -1,9 +1,13 @@
 PROGS:=$(patsubst %.c,%,$(wildcard *.c))
 CC:=musl-gcc -static
-CFLAGS:=-pedantic -Werror -Wextra -O -g3 -Wall -std=c17
+CFLAGS:=-pedantic -Werror -Wextra -O -g3 -Wall -std=c18 \
+	-Wconversion -Warith-conversion -Wdouble-promotion \
+	-Wuninitialized -Wformat=2
+
 LDFLAGS:=-lm
+
 .PHONY: all
-all: hw fixed_width hello
+all: hw
 	@:
 
 %: %.c
@@ -16,7 +20,7 @@ all: hw fixed_width hello
 %.o : %.c
 	$(CC) -c $(CFLAGS) -o $@ $<
 
-hw: hw.o hw-lib.o
+#hw: hw.o hw-lib.o
 
 .PHONY: clean
 clean:
